--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="shortcut icon" href="Asset/heart-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Bagus & Rida≤</title>
+    <title>Bagus & Rida</title>
 </head>
 
 <body>
