--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
         </div>
     </div>
 
+    <audio id="backgroundMusic">
+        <source src="Asset/y2mate.com - Gending Manten Adat Jawa Kebo Giro.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+      </audio>
+      
+      <button class="hidden" id="toggleMusicButton">Pause Music</button>
+
+
 
     <script src="main.js"></script>
 </body>
