--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <img src="Asset/Flower-middle.png" alt="">
     </div>
 
-
+<!-- 
     <div class="gift-section hidden">
         <div class="gift-card-container">
             <h1>Kirim Hadiah</h1>
@@ -136,7 +136,7 @@
             </h4>
             <button id="whatsappButton" class="disappear">Konfirmasi</button>
         </div>
-    </div>
+    </div> -->
 
     <audio id="backgroundMusic">
         <source src="Asset/y2mate.com - Gending Manten Adat Jawa Kebo Giro.mp3" type="audio/mp3">
